<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/shape_my_fund_help"
        >
    <ImageView
        android:layout_width="236dp"
        android:layout_height="138dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:src="@drawable/tz"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notice_title"
            android:textColor="@color/black_222222"
            android:textSize="17sp"
            android:textStyle="bold"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:src="@drawable/yuan_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/notice_list1"
            android:textColor="@color/black_222222"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:src="@drawable/yuan_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/notice_list2"
            android:textColor="@color/black_222222"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:src="@drawable/yuan_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/notice_list3"
            android:textColor="@color/black_222222"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:text="@string/notice_cancel"
            android:textColor="@color/black_222222"
            android:textSize="13sp"
            android:background="@drawable/btn_stroke_bbbbbb"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvOpenNotice"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/notice_open"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:background="@drawable/shape_orange_btn"
            />
    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:src="@drawable/cuidan_guan"/>
</LinearLayout>
