<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical" >

    <include layout="@layout/top_nav_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/splite_line_whole" />

        <LinearLayout
            android:id="@+id/llNotification"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/more_msg_notification"
                android:textColor="@color/common_text_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/gray_4"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivSwitch"
                android:layout_width="51dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ty_kaiguan_2"
                android:scaleType="centerInside"
                />
        </LinearLayout>

        <include layout="@layout/splite_line_whole" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/splite_line_whole" />

        <LinearLayout
            android:id="@+id/llFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/item_clicked_bg_selector"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/more_feedback"
                android:textColor="@color/common_text_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <include android:visibility="gone" layout="@layout/splite_line_margin_left" />

        <LinearLayout
            android:id="@+id/llScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/item_clicked_bg_selector"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/more_score"
                android:textColor="@color/common_text_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <include layout="@layout/splite_line_whole" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/splite_line_whole" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llAssistant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/item_clicked_bg_selector"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/more_assistant"
                android:textColor="@color/common_text_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <include layout="@layout/splite_line_margin_left" android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llClearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/item_clicked_bg_selector"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/more_clear_cache"
                android:textColor="@color/common_text_gray"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvCacheSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:textColor="@color/gray_999999"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <include layout="@layout/splite_line_whole" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn_login_normal"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/orange_red"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">
        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="当前版本："
            android:textColor="@color/black_666666"
            android:textSize="14dp"
            />
    </LinearLayout>
</LinearLayout>