<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include layout="@layout/top_nav_bar_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/denglu_yonghu" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/register_input_phone_number"
                android:inputType="phone"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/common_text_gray"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:cursorVisible="true"
                android:textSize="15sp" />
        </LinearLayout>

        <include layout="@layout/splite_line_margin_left_right" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/denglu_mima" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/register_input_password_2"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_text_color"
                android:textColor="@color/common_text_gray"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="15sp" />
        </LinearLayout>

        <include layout="@layout/splite_line_margin_left_right" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_red_point"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|right"
            android:text="@string/forget_password"
            android:textColor="@color/gray_2"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" >

                <include
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    layout="@layout/splite_line_margin_left_right" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/third_login"
                    android:textColor="@color/gray_2"
                    android:textSize="13sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@+id/rlQQLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ivQQLogin"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/denglu_qq" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlWeiboLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ivWeiboLogin"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/denglu_weibo" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlWeixinLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ivWeixinLogin"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/denglu_weixin" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>